footer spacing fixed for small resolutions

--- a/public/responsive/320px_to_767px.css
+++ b/public/responsive/320px_to_767px.css
@@ -347,7 +347,7 @@ footer section.bottom {
   }
   
   .bottom .tile ul {
-    width: 70%;
+    width: 85%;
     margin: 0 auto;
   }
   
